2006-06-18  Szilveszter Farkas <Szilveszter.Farkas@gmail.com>

    * backend/info.py: implemented version(), whoami() and info()
    * backend/info_helper.py: some helper functions for info.info()

2006-06-13  Szilveszter Farkas <Szilveszter.Farkas@gmail.com>

    * backend/info.py: nick() and revno() implemented
    * backend/commit.py: minor tweaks to push()
    * backend/init.py: minor tweaks to checkout() and branch()

2006-06-12  Szilveszter Farkas <Szilveszter.Farkas@gmail.com>

    * backend/init.py: checkout() implemented - not tested yet
    * backend/commit.py: push() implemented - not tested yet
    * backend/error.py: another bunch of exceptions added

2006-06-11  Szilveszter Farkas <Szilveszter.Farkas@gmail.com>

    * backend/commit.py: commit() implemented
    * backend/fileops.py: remove() implemented
    * backend/errors.py: more exceptions added
    * more detailed comments for the different functions

2006-06-10  Szilveszter Farkas <Szilveszter.Farkas@gmail.com>

    * backend/errors.py: some basic exceptions added
    * backend/fileops.py: mkdir() and add() implemented 
    * backend/init.py: init() and branch() implemented
    * The work has begun :)